k8s/db.yml
kind: Endpoints
apiVersion: v1
metadata:
  name: postgres
subsets:
  - addresses:
      - ip: 10.10.10.99
    ports:
      - port: 5432
        name: postgres
