k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: deploy
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test
          image: test
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: deploy
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30001
  type: NodePort
