k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: deploy
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: default-server-secret
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test2
                port:
                  number: 80
