k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: deploy
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/acme-challenge-type: http01
    acme.cert-manager.io/http01-edit-in-place: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  # ingressClassName: nginx
  tls:
    - hosts:
        - $DOMAIN
      # secretName: default-server-secret
      secretName: example-app-tls
  rules:
    - host: $DOMAIN
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test2
                port:
                  number: 80
